# panko

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci_cd.yml
src/: lib.rs
src/snapshots/: panko__tests__carriage_return.snap  panko__tests__cyrillic_with_qmark_newline.snap  panko__tests__double_symbol_tail.snap  panko__tests__emoji_both_sides.snap  panko__tests__empty.snap  panko__tests__multiline_complex.snap  panko__tests__single_alpha.snap  panko__tests__single_space.snap  panko__tests__space_split.snap  panko__tests__underscore_split.snap
