[package]
name = "panko"
version = "0.1.0"
edition = "2021"
authors = ["Lev Kudryashov <lev.kudryashov1994@gmail.com>"]
license = "MIT"
description = "A small, zero-copy text tokenizer that crumbles strings into Words, Symbols, and Newlines."
readme = "README.md"
repository = "https://github.com/LEVLLN/panko"
homepage = "https://github.com/LEVLLN/panko"
documentation = "https://docs.rs/panko"
keywords = ["tokenizer", "text", "unicode", "split", "nlp"]
categories = ["text-processing", "parser-implementations"]

[dependencies]
itertools = "0.14.0"
unicase = "2.9.0"

[dev-dependencies]
rstest = "0.26.1"
insta = { version = "1.47.2", features = ["yaml"] }

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"
unimplemented = "deny"
dbg_macro = "deny"
indexing_slicing = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
fallible_impl_from = "deny"
match_same_arms = "deny"
match_wildcard_for_single_variants = "deny"
if_not_else = "deny"
needless_continue = "deny"
explicit_iter_loop = "deny"
explicit_into_iter_loop = "deny"
redundant_clone = "deny"
implicit_clone = "deny"
clone_on_copy = "deny"
undocumented_unsafe_blocks = "deny"
